[tool.poetry]
name = "yappy"
version = "0.1.0"
description = ""
authors = ["manishshettym <manishs@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycg = "^0.0.7"
packaging = "^23.2"
pyan3 = "^1.2.0"
setuptools = "^68.2.2"
python-graphs = "^1.2.3"
rich = "^13.6.0"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
